tests/ui/parser/issues/issue-112458.rs
fn main() {
    println!("{}", x.); //~ ERROR unexpected token: `)`
    //~^ ERROR cannot find value `x` in this scope
}
